--- a/print.html
+++ b/print.html
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Datapacking Technical by EstEarth</a></li><li class="chapter-item expanded "><a href="coding/tooling.html"><strong aria-hidden="true">1.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="basic/index.html"><strong aria-hidden="true">2.</strong> Datapacking Basic</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="basic/advancement.html"><strong aria-hidden="true">2.1.</strong> Advancement</a></li><li class="chapter-item expanded "><a href="basic/function.html"><strong aria-hidden="true">2.2.</strong> Function</a></li><li class="chapter-item expanded "><a href="basic/loot_table.html"><strong aria-hidden="true">2.3.</strong> Loot table</a></li><li class="chapter-item expanded "><a href="basic/predicate.html"><strong aria-hidden="true">2.4.</strong> Predicate</a></li><li class="chapter-item expanded "><a href="basic/recipe.html"><strong aria-hidden="true">2.5.</strong> recipe</a></li><li class="chapter-item expanded "><a href="basic/tag.html"><strong aria-hidden="true">2.6.</strong> tag</a></li></ol></li><li class="chapter-item expanded "><a href="basic_more/index.html"><strong aria-hidden="true">3.</strong> Datapacking Basic +</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="basic_more/structure.html"><strong aria-hidden="true">3.1.</strong> Structure *.nbt</a></li><li class="chapter-item expanded "><a href="basic_more/dimension_type.html"><strong aria-hidden="true">3.2.</strong> Dimension type</a></li><li class="chapter-item expanded "><a href="basic_more/dimension.html"><strong aria-hidden="true">3.3.</strong> Dimension</a></li><li class="chapter-item expanded "><a href="basic_more/world_gen.html"><strong aria-hidden="true">3.4.</strong> Worldgen</a></li></ol></li><li class="chapter-item expanded "><a href="rp_basic/index.html"><strong aria-hidden="true">4.</strong> Resource pack Basic</a></li><li class="chapter-item expanded "><a href="tip_trick/index.html"><strong aria-hidden="true">5.</strong> Tips/Tricks</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tip_trick/pack_mcmeta.html"><strong aria-hidden="true">5.1.</strong> pack.mcmeta trick</a></li></ol></li><li class="chapter-item expanded "><a href="technical/index.html"><strong aria-hidden="true">6.</strong> Tecnical advice</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="technical/namespace.html"><strong aria-hidden="true">6.1.</strong> Namespace</a></li><li class="chapter-item expanded "><a href="technical/structure.html"><strong aria-hidden="true">6.2.</strong> Structure</a></li><li class="chapter-item expanded "><a href="technical/optimization/index.html"><strong aria-hidden="true">6.3.</strong> Optimization</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="technical/optimization/selector.html"><strong aria-hidden="true">6.3.1.</strong> @ selector</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="index.html">Datapacking Technical by EstEarth</a></li><li class="chapter-item expanded "><a href="coding/tooling.html"><strong aria-hidden="true">1.</strong> Tooling</a></li><li class="chapter-item expanded "><a href="basic/index.html"><strong aria-hidden="true">2.</strong> Datapacking Basic</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="basic/advancement.html"><strong aria-hidden="true">2.1.</strong> Advancement</a></li><li class="chapter-item expanded "><a href="basic/function.html"><strong aria-hidden="true">2.2.</strong> Function</a></li><li class="chapter-item expanded "><a href="basic/loot_table.html"><strong aria-hidden="true">2.3.</strong> Loot table</a></li><li class="chapter-item expanded "><a href="basic/predicate.html"><strong aria-hidden="true">2.4.</strong> Predicate</a></li><li class="chapter-item expanded "><a href="basic/recipe.html"><strong aria-hidden="true">2.5.</strong> recipe</a></li><li class="chapter-item expanded "><a href="basic/tag.html"><strong aria-hidden="true">2.6.</strong> tag</a></li></ol></li><li class="chapter-item expanded "><a href="basic_more/index.html"><strong aria-hidden="true">3.</strong> Datapacking Basic +</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="basic_more/structure.html"><strong aria-hidden="true">3.1.</strong> Structure *.nbt</a></li><li class="chapter-item expanded "><a href="basic_more/dimension_type.html"><strong aria-hidden="true">3.2.</strong> Dimension type</a></li><li class="chapter-item expanded "><a href="basic_more/dimension.html"><strong aria-hidden="true">3.3.</strong> Dimension</a></li><li class="chapter-item expanded "><a href="basic_more/world_gen.html"><strong aria-hidden="true">3.4.</strong> Worldgen</a></li></ol></li><li class="chapter-item expanded "><a href="rp_basic/index.html"><strong aria-hidden="true">4.</strong> Resource pack Basic</a></li><li class="chapter-item expanded "><a href="tip_trick/index.html"><strong aria-hidden="true">5.</strong> Tips/Tricks</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tip_trick/pack_mcmeta.html"><strong aria-hidden="true">5.1.</strong> pack.mcmeta trick</a></li></ol></li><li class="chapter-item expanded "><a href="technical/index.html"><strong aria-hidden="true">6.</strong> Tecnical advice</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="technical/namespace.html"><strong aria-hidden="true">6.1.</strong> Pack Namespace</a></li><li class="chapter-item expanded "><a href="technical/structure.html"><strong aria-hidden="true">6.2.</strong> Pack file structure</a></li><li class="chapter-item expanded "><a href="technical/optimization/index.html"><strong aria-hidden="true">6.3.</strong> Pack Optimization</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="technical/optimization/selector.html"><strong aria-hidden="true">6.3.1.</strong> @ selector</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -339,26 +339,26 @@ and <strong>not force</strong> it in any way.</p>
 </code></pre>
 <h2><a class="header" href="#note" id="note">Note</a></h2>
 <p>The reason for setting such as ANCHOR, TODO, SECTION to false is because it is the default of the extension that produces the same word highlight.</p>
-<h1><a class="header" href="#ดาตาแพคขันพืนฐาน" id="ดาตาแพคขันพืนฐาน">ดาต้าแพ็คขั้นพื้นฐาน</a></h1>
-<p>ส่วนนี้สำหรับสอนเขียนดาต้าแพ็ค เพื่อทำความรู้จักและเข้าใจในส่วนต่างๆ ในระดับเบื้องต้น</p>
+<h1><a class="header" href="#datapacking-basic" id="datapacking-basic">Datapacking Basic</a></h1>
+<p>This section is for teaching how to write a data pack. To get to know and understand each part at the introductory level.</p>
 <h1><a class="header" href="#advancement" id="advancement">Advancement</a></h1>
 <h1><a class="header" href="#function" id="function">Function</a></h1>
 <h1><a class="header" href="#loot-table" id="loot-table">Loot table</a></h1>
 <h1><a class="header" href="#predicate" id="predicate">Predicate</a></h1>
 <h1><a class="header" href="#recipe" id="recipe">recipe</a></h1>
 <h1><a class="header" href="#tag" id="tag">tag</a></h1>
-<h1><a class="header" href="#ดาตาแพคขันพืนฐาน-เพิมเติม" id="ดาตาแพคขันพืนฐาน-เพิมเติม">ดาต้าแพ็คขั้นพื้นฐาน เพิ่มเติม</a></h1>
-<p>เร็วนี้ๆ</p>
-<h1><a class="header" href="#ไฟล-structure-nbt" id="ไฟล-structure-nbt">ไฟล์ Structure *.nbt</a></h1>
-<p>เร็วๆนี้</p>
-<h1><a class="header" href="#ไฟล-dimension-type" id="ไฟล-dimension-type">ไฟล์ Dimension type</a></h1>
-<p>เร็วๆนี้</p>
-<h1><a class="header" href="#ไฟล-dimension" id="ไฟล-dimension">ไฟล์ Dimension</a></h1>
-<p>เร็วๆนี้</p>
-<h1><a class="header" href="#ไฟล-world-gen" id="ไฟล-world-gen">ไฟล์ World Gen</a></h1>
-<p>เร็วนี้ๆ</p>
-<h1><a class="header" href="#resource-pack-พืนฐาน" id="resource-pack-พืนฐาน">Resource pack พื้นฐาน</a></h1>
-<p>เร็วๆนี้</p>
+<h1><a class="header" href="#datapacking-basic-" id="datapacking-basic-">Datapacking Basic +</a></h1>
+<p>In the process of maintenance.</p>
+<h1><a class="header" href="#structure-nbt" id="structure-nbt">Structure *.nbt</a></h1>
+<p>In the process of maintenance.</p>
+<h1><a class="header" href="#dimension-type" id="dimension-type">Dimension type</a></h1>
+<p>In the process of maintenance.</p>
+<h1><a class="header" href="#dimension" id="dimension">Dimension</a></h1>
+<p>In the process of maintenance.</p>
+<h1><a class="header" href="#world-gen" id="world-gen">World Gen</a></h1>
+<p>In the process of maintenance.</p>
+<h1><a class="header" href="#resource-pack-basic" id="resource-pack-basic">Resource pack basic</a></h1>
+<p>In the process of maintenance.</p>
 <h1><a class="header" href="#tip-n-trick" id="tip-n-trick">Tip n Trick</a></h1>
 <p>Give me tips and tricks based on my experience and use.</p>
 <h1><a class="header" href="#packmcmeta-trick" id="packmcmeta-trick">pack.mcmeta trick</a></h1>
@@ -473,12 +473,12 @@ Which can be applied to <code>Advancement</code> too.</p>
 <p>I once thought I would stop making such suggestions. But Professor Boomber encouraged me.</p>
 <p><strong>Boomber:</strong> Personally, I think you should keep giving your advice. There will be someone like this sometime but most of the time your advice will be very beneficial to the datapacker. You shouldn't let one negative comment affect you.</p>
 <p>So I keep doing it. And hope you understand what I have given you.</p>
-<h1><a class="header" href="#โครงสรางไฟลดาตาแพค" id="โครงสรางไฟลดาตาแพค">โครงสร้างไฟล์ดาต้าแพ็ค</a></h1>
-<h2><a class="header" href="#เกียวกับ" id="เกียวกับ">เกี่ยวกับ</a></h2>
-<p>สำหรับแสดงตัวอย่างหนึ่งในโครงสร้างไฟล์ดาต้าแพ็คที่สวยงาม เป็นระเบียบ จัดกลุ่มได้ง่าย ง่ายต่อการอ่าน พัฒนา และ ซ่อมบำรุง</p>
-<h2><a class="header" href="#ตัวอยางทีเปนไปไดในแตละกรณี" id="ตัวอยางทีเปนไปไดในแตละกรณี">ตัวอย่างที่เป็นไปได้ในแต่ละกรณี</a></h2>
-<h3><a class="header" href="#ดาตาแพคหลายชุด" id="ดาตาแพคหลายชุด">ดาต้าแพ็คหลายชุด</a></h3>
-<h3><a class="header" href="#ดาตาแพคชุดเดียว" id="ดาตาแพคชุดเดียว">ดาต้าแพ็คชุดเดียว</a></h3>
+<h1><a class="header" href="#datapack-file-structure" id="datapack-file-structure">Datapack file structure</a></h1>
+<h2><a class="header" href="#about-2" id="about-2">About</a></h2>
+<p>For example, one of the beautiful file structures is easy to organize and group. Easy to read, develop and maintain.</p>
+<h2><a class="header" href="#examples-are-possible-in-each-case" id="examples-are-possible-in-each-case">Examples are possible in each case.</a></h2>
+<h3><a class="header" href="#multiple-packs" id="multiple-packs">Multiple packs</a></h3>
+<h3><a class="header" href="#standalone-pack" id="standalone-pack">Standalone pack</a></h3>
 
                     </main>
 
